completed region's branches count
