# app/Models/District.php
@@ -2,6 +2,7 @@
 
 namespace App\Models;
 
+use App\Models\Branch;
 use App\Models\Region;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
@@ -17,5 +18,14 @@ class District extends Model
     public function region()
     {
         return $this->belongsTo(Region::class);
+    }
+
+    public function brands()
+    {
+        return $this->hasMany(Brand::class);
+    }
+    public function branches()
+    {
+        return $this->hasMany(Branch::class);
     }
 }
