# app/Models/Region.php
@@ -14,4 +14,9 @@ class Region extends Model
     {
         return $this->hasMany(District::class);
     }
+
+    public function branches()
+    {
+        return $this->hasMany(Branch::class);
+    }
 }
